--- a/t0/index.html
+++ b/t0/index.html
@@ -16,15 +16,20 @@
 			height: 100% auto; 
 			width: 1024px;
 			background-color: white;
+			border-bottom-style: outset;
+			border-right-style: outset;
+			border-color: black;	
 			
 		}
 		.conteudo {
 			text-align: left;		
 		}
 		p{
+		margin-left: 1%;
 		font-family:Helvetica;
 		}		
 		h1{
+		margin-left: 1%;
 		margin-top: 3%;
 		font-family:Helvetica;
 		text-align: left;
@@ -34,9 +39,19 @@
 		}
 		.nome{
 		background-color: green;
+		border-bottom-style: outset;
+		border-bottom-color: gray;
 		}
-		.heads{
-			
+		.headLeft{
+		margin-left: 1%;
+		text-align: left;	
+		position: inherit;		
+		}
+		.headRight{
+		margin-right: 1%;
+		text-align: right;
+		position: inherit;
+		margin-top: -4%
 		}
 		.feets{
 		
@@ -46,6 +61,8 @@
 	<body>
 		<div class="container">
 			<div class="nome"><h1><br> Rodrigo Bueno Tomiosso</h1></div>
+			<div class="headLeft"><br> Rua São Pedro, 401 D, Ap 101, Centro, Chapecó-SC  </div>
+			<div class="headRight"><br> rodrigo.uffs@gmail.com – (49)91048863</div>
 			 	
 			<div class="conteudo">
 				<h1>Informações Gerais:</h1>
