--- a/t0/index.html
+++ b/t0/index.html
@@ -74,7 +74,7 @@
 			<div class="headLeft">
 				<br>Rua São Pedro, 401 D, Ap 101, Centro, Chapecó-SC
 				</div>
-			<div class="headRight"><br> rodrigo.uffs@gmail.com – (49)91048863</div>
+			<div class="headRight"><br> rodrigo.uffs@gmail.com – (49)91048863.</div>
 			<div class="conteudo">
 				
 				<h1>Informações Gerais:</h1>
